TFP-6355: Toggle for AP 5052 kun når det er næring (#695)